--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.10.0",
+    "better-sqlite3": "^11.9.1",
+    "chalk": "^5.6.2",
+    "express": "^5.1.0"
+  },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/express": "^5.0.3",
     "typescript": "^5.5.3"
   },
   "private": true
