--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /out-tsc
 
 /node_modules
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -11,4 +12,4 @@ yarn-error.log*
 .vscode/*
 
 /.idea
-data.db
+/data
