--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "chalk": "^5.6.2",
+    "electron": "^38.2.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
