basic app setup

--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
   "name": "instepserver",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "type": "module",
+  "author": "Krois | Dimova",
+  "description": "Server for InStep",
+  "main": ".webpack/main",
   "scripts": {
-    "build": "tsc"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "dependencies": {
-    "axios": "^1.10.0",
     "chalk": "^5.6.2",
-    "electron": "^38.2.0",
-    "express": "^5.1.0"
+    "electron-squirrel-startup": "^1.0.1",
+    "express": "^5.1.0",
+    "i18next": "^25.5.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-rpm": "^7.9.0",
+    "@electron-forge/maker-squirrel": "^7.9.0",
+    "@electron-forge/maker-zip": "^7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+    "@electron-forge/plugin-fuses": "^7.9.0",
+    "@electron-forge/plugin-webpack": "^7.9.0",
+    "@electron/fuses": "^1.8.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "css-loader": "^6.11.0",
+    "electron": "38.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "node-loader": "^2.1.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.4",
     "typescript": "^5.5.3"
   },
   "private": true
