--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,26 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES6",
+    "module": "commonjs",
     "moduleResolution": "node",
+
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "allowJs": true,
+    "noImplicitAny": true,
+    "sourceMap": true,
+
+    "lib": ["ESNext", "DOM"],
+
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src/**/*", "app"],
+  "exclude": ["node_modules", "dist"]
 }
