--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish": "electron-forge publish"
   },
   "dependencies": {
+    "ansi-to-html": "^0.7.2",
     "chalk": "^5.6.2",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^5.1.0",
@@ -27,10 +28,12 @@
     "@electron-forge/plugin-webpack": "^7.9.0",
     "@electron/fuses": "^1.8.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.11.0",
     "electron": "38.2.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.1.0",
+    "source-map-support": "^0.5.21",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.4",
     "typescript": "^5.5.3"
