--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "publish": "electron-forge publish"
   },
   "dependencies": {
+    "@types/electron-store": "^1.3.1",
     "ansi-to-html": "^0.7.2",
     "chalk": "^5.6.2",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^11.0.2",
     "express": "^5.1.0",
     "i18next": "^25.5.2"
   },
@@ -27,6 +29,7 @@
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-forge/plugin-webpack": "^7.9.0",
     "@electron/fuses": "^1.8.0",
+    "@types/express": "^5.0.3",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.11.0",
