--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    //"target": "ES6",
+    //"module": "commonjs",
+    //"moduleResolution": "node",
+    "target": "esnext",
+    "module": "ESNext",
+    "moduleResolution": "nodenext",
 
     "resolveJsonModule": true,
     "esModuleInterop": true,
