translations; better toasts; better logs window; log autoscroll; default screen size; button image for lang; various optimisations;

--- a/config.json
+++ b/config.json
@@ -1,3 +1,9 @@
 {
-  "dbPath": "data"
+  "dbPath": "data",
+  "toastTimeout": 2000,
+
+  "defaultWindowWidth": 1200,
+  "defaultWindowHeight": 700,
+  "minWindowWidth": 700,
+  "minWindowHeight": 500
 }
