--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "instepserver",
   "version": "1.0.0",
-  "author": "Krois | Dimova",
-  "description": "Server for InStep",
+  "author": "DKrois - IDimova",
+  "description": "Server for InStep Indoor Navigation System",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -11,7 +11,6 @@
     "publish": "electron-forge publish"
   },
   "dependencies": {
-    "@types/electron-store": "^1.3.1",
     "ansi-to-html": "^0.7.2",
     "chalk": "^5.6.2",
     "electron-squirrel-startup": "^1.0.1",
@@ -20,26 +19,29 @@
     "i18next": "^25.6.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.9.0",
-    "@electron-forge/maker-deb": "^7.9.0",
-    "@electron-forge/maker-rpm": "^7.9.0",
-    "@electron-forge/maker-squirrel": "^7.9.0",
-    "@electron-forge/maker-zip": "^7.9.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
-    "@electron-forge/plugin-fuses": "^7.9.0",
-    "@electron-forge/plugin-webpack": "^7.9.0",
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-rpm": "^7.10.2",
+    "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-wix": "^7.10.2",
+    "@electron-forge/maker-zip": "^7.10.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+    "@electron-forge/plugin-fuses": "^7.10.2",
+    "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
+    "@types/electron-store": "^3.2.2",
     "@types/express": "^5.0.3",
+    "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "copy-webpack-plugin": "^13.0.1",
-    "css-loader": "^6.11.0",
-    "electron": "38.2.0",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "css-loader": "^7.1.2",
+    "electron": "38.2.2",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "node-loader": "^2.1.0",
-    "source-map-support": "^0.5.21",
-    "style-loader": "^3.3.4",
+    "source-map-support": "0.5.10",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.5.3"
+    "typescript": "5.5.3"
   },
   "private": true
 }
