--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
-    //"target": "ES6",
-    //"module": "commonjs",
-    //"moduleResolution": "node",
     "target": "esnext",
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "nodenext",
 
     "resolveJsonModule": true,
@@ -21,7 +18,8 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+      "express": ["node_modules/@types/express/index.d.ts"]
     }
   },
   "include": ["src/**/*", "app"],
