--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "author": "DKrois - IDimova",
   "description": "Server for InStep Indoor Navigation System",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DKrois/InStepServer.git"
+  },
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -17,7 +21,8 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "express": "^5.1.0",
-    "i18next": "^25.6.0"
+    "i18next": "^25.6.0",
+    "update-electron-app": "^3.1.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.10.2",
@@ -30,10 +35,12 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/electron-store": "^3.2.2",
     "@types/express": "^5.0.3",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "bcryptjs": "^3.0.2",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "electron": "38.2.2",
