--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-store": "^11.0.2",
     "express": "^5.1.0",
     "i18next": "^25.6.0",
+    "multer": "^2.0.2",
     "update-electron-app": "^3.1.1"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/electron-store": "^3.2.2",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "bcryptjs": "^3.0.2",
