--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "ansi-to-html": "^0.7.2",
+    "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
     "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "i18next": "^25.6.0",
     "multer": "^2.0.2",
+    "nedb-promises-session-store": "^1.0.4",
     "update-electron-app": "^3.1.1"
   },
   "devDependencies": {
@@ -37,13 +40,12 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
-    "@types/bcryptjs": "^2.4.6",
     "@types/electron-store": "^3.2.2",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
-    "bcryptjs": "^3.0.2",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "electron": "38.2.2",
