--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "electron-store": "^11.0.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "http-terminator": "^3.2.0",
     "i18next": "^25.6.0",
     "multer": "^2.0.2",
     "nedb-promises-session-store": "^1.0.4",
