--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,20 @@
+# .github/workflows/release.yml
+
 name: Build & Release
 
 on:
   push:
     tags:
-      - 'v*.*.*' # Run this workflow when you push a new version tag
+      - 'v*.*.*' # This is the trigger: runs only when you push a tag like v1.0.1, v1.2.0, etc.
 
 jobs:
   build-and-release:
+    # Use a build strategy that runs a job for each OS
     strategy:
       matrix:
-        # Run a job for each OS
         os: [windows-latest, macos-latest, ubuntu-latest]
 
-    # Use the OS from the matrix
+    # Use the OS from the matrix for the runner
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -22,27 +24,33 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 18 # Or your preferred Node.js version
 
       - name: Install dependencies
+        # 'npm ci' is recommended for CI as it's faster and stricter than 'npm install'
         run: npm ci
 
       - name: Build/make the application
-        # This command runs Electron Forge and builds for the current OS of the runner
+        # This command runs your existing "make" script from package.json
         run: npm run make
         env:
-          # This is required for macOS notarization and publishing to GitHub
+          # The GITHUB_TOKEN is automatically provided by GitHub Actions
+          # It's needed for publishing to the release
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          # FOR MACOS SIGNING/NOTARIZATION (you would add these as repo secrets)
+          # IMPORTANT: For macOS signing and notarization, you would need to add these
+          # as secrets in your GitHub repository settings. The build will succeed without them,
+          # but the resulting app won't be runnable on modern macOS without user workarounds.
           # APPLE_ID: ${{ secrets.APPLE_ID }}
           # APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
           # APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
       - name: Upload artifacts to release
+        # This action finds the release corresponding to your tag and uploads files to it
         uses: softprops/action-gh-release@v1
         with:
-          # This tells the action to upload all files from the 'out/make' directory
+          # This tells the action to upload everything from the 'out/make' directory
+          # The glob pattern `**/*` means all files in all subdirectories.
           files: |
             out/make/**/*
         env:
