--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,9 +52,17 @@ jobs:
         # This action finds the release corresponding to your tag and uploads files to it
         uses: softprops/action-gh-release@v1
         with:
+          generate_release_notes: true
           # This tells the action to upload everything from the 'out/make' directory
           # The glob pattern `**/*` means all files in all subdirectories.
           files: |
-            out/make/**/*
+            out/make/squirrel.windows/x64/RELEASES
+            out/make/squirrel.windows/x64/*.nupkg
+            out/make/squirrel.windows/x64/*.exe
+            out/make/wix/x64/*.msi
+            out/make/*.dmg
+            out/make/*.zip
+            out/make/*.deb
+            out/make/*.rpm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
