--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.18.2",
     "http-terminator": "^3.2.0",
     "i18next": "^25.6.0",
+    "marked": "^17.0.0",
     "multer": "^2.0.2",
     "nedb-promises-session-store": "^1.0.4",
     "update-electron-app": "^3.1.1"
@@ -45,6 +46,7 @@
     "@types/electron-store": "^3.2.2",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/marked": "^5.0.2",
     "@types/multer": "^2.0.0",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
