--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "ansi-to-html": "^0.7.2",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "chalk": "^5.6.2",
     "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
@@ -25,7 +25,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "http-terminator": "^3.2.0",
-    "i18next": "^25.6.0",
+    "i18next": "^25.6.2",
     "marked": "^17.0.0",
     "multer": "^2.0.2",
     "nedb-promises-session-store": "^1.0.4",
@@ -42,22 +42,20 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
-    "@types/electron-store": "^3.2.2",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
-    "@types/marked": "^5.0.2",
     "@types/multer": "^2.0.0",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
-    "electron": "38.2.2",
+    "electron": "^39.2.1",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "node-loader": "^2.1.0",
-    "source-map-support": "0.5.10",
+    "source-map-support": "^0.5.21",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
-    "typescript": "5.5.3"
+    "typescript": "^5.9.3"
   },
   "private": true
 }
