--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,12 +33,11 @@ jobs:
           node-version: 22.18.0
 
       - name: Install dependencies
-        # 'npm ci' is recommended for CI as it's faster and stricter than 'npm install'
-        run: npm ci
+        run: pnpm i
 
       - name: Build/make the application
         # This command runs your existing "make" script from package.json
-        run: npm run make
+        run: pnpm make
         env:
           # The GITHUB_TOKEN is automatically provided by GitHub Actions
           # It's needed for publishing to the release
