--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 /tmp
-/out-tsc
+/temp
 
 /node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.pnp
-.pnp.js
-
-.vscode/*
-
 /dist
 /.idea
-/data
 /.webpack
 /out
+
+/data
+/key.pem
+/cert.pem
