--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "make": "electron-forge make"
   },
   "dependencies": {
+    "@electron-forge/shared-types": "^7.10.2",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
     "chalk": "^5.6.2",
