--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "css-loader": "^7.1.2",
     "electron": "^39.2.1",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "lru-cache": "^11.2.4",
     "node-loader": "^2.1.0",
     "source-map-support": "^0.5.21",
     "style-loader": "^4.0.0",
