--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/ejs": "^3.1.5",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
+    "bonjour-service": "^1.3.0",
     "chalk": "^5.6.2",
     "ejs": "^3.1.10",
     "electron-log": "^5.4.3",
