--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "@electron-forge/shared-types": "^7.10.2",
-    "@types/ejs": "^3.1.5",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
     "bonjour-service": "^1.3.0",
@@ -46,6 +45,7 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
@@ -60,7 +60,8 @@
     "source-map-support": "^0.5.21",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "webpack": "^5.103.0"
   },
   "private": true
 }
