--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -1,11 +1,13 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../main/tsconfig.json",
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
     "moduleResolution": "node",
+
+    "lib": ["ES6", "DOM"]
   },
   "include": [
-    "src/renderer/js/**/*"
+    "js/**/*"
   ]
 }
