--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -13,10 +13,10 @@
     "noImplicitAny": true,
     "sourceMap": true,
 
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext"],
 
     "outDir": "dist",
-    "baseUrl": ".",
+    "baseUrl": "../..",
     "paths": {
       "*": ["node_modules/*"],
       "express": ["node_modules/@types/express/index.d.ts"],
@@ -25,6 +25,7 @@
       "multer": ["node_modules/@types/multer/index.d.ts"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["**/*"],
+  "exclude": [
+    "../../node_modules", "dist"]
 }
