--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "docs:bundle": "bun build sites/docs/src/*.ts --outdir sites/docs/assets/js --target=browser --format=esm --splitting --minify"
+    "build:docs": "bun build sites/docs/src/*.ts --outdir sites/docs/assets/js --target=browser --format=esm --splitting --minify"
   },
   "dependencies": {
     "@electron-forge/shared-types": "^7.10.2",
@@ -28,6 +28,7 @@
     "electron-store": "^11.0.2",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "front-matter": "^4.0.2",
     "http-terminator": "^3.2.0",
     "i18next": "^25.6.2",
     "marked": "^17.0.0",
