--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@electron-forge/shared-types": "^7.10.2",
+    "@types/multicast-dns": "^7.2.4",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
     "bonjour-service": "^1.3.0",
@@ -33,6 +34,7 @@
     "i18next": "^25.6.2",
     "marked": "^17.0.0",
     "multer": "^2.0.2",
+    "multicast-dns": "^7.2.5",
     "nedb-promises-session-store": "^1.0.4",
     "update-electron-app": "^3.1.1"
   },
