--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "@electron-forge/shared-types": "^7.10.2",
-    "@types/multicast-dns": "^7.2.4",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
     "bonjour-service": "^1.3.0",
@@ -36,6 +35,7 @@
     "multer": "^2.0.2",
     "multicast-dns": "^7.2.5",
     "nedb-promises-session-store": "^1.0.4",
+    "qrcode": "^1.5.4",
     "update-electron-app": "^3.1.1"
   },
   "devDependencies": {
@@ -49,10 +49,13 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-webpack": "^7.10.2",
     "@electron/fuses": "^1.8.0",
+    "@types/dns-packet": "^5.6.5",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
+    "@types/multicast-dns": "^7.2.4",
+    "@types/qrcode": "^1.5.6",
     "@types/source-map-support": "^0.5.10",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "copy-webpack-plugin": "^13.0.1",
