--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instepserver",
   "productName": "InStep Server",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": "DKrois - IDimova",
   "description": "Server for InStep Indoor Navigation System",
   "repository": {
@@ -11,9 +11,9 @@
   "license": "MIT",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
+    "start": "npm run build:docs && electron-forge start",
+    "package": "npm run build:docs && electron-forge package",
+    "make": "npm run build:docs && electron-forge make",
     "build:docs": "bun build sites/docs/src/*.ts --outdir sites/docs/assets/js --target=browser --format=esm --splitting --minify"
   },
   "dependencies": {
