--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/DKrois/InStepServer.git"
   },
-  "license": "MIT",
+  "license": "GPL-2.0",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
