--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:docs": "bun build sites/docs/src/*.ts --outdir sites/docs/assets/js --target=browser --format=esm --splitting --minify"
   },
   "dependencies": {
+    "@isaacs/ttlcache": "^2.1.4",
     "ansi-to-html": "^0.7.2",
     "bcryptjs": "^3.0.3",
     "bonjour-service": "^1.3.0",
@@ -29,7 +30,6 @@
     "front-matter": "^4.0.2",
     "http-terminator": "^3.2.0",
     "i18next": "^25.8.10",
-    "lru-cache": "^11.2.6",
     "marked": "^17.0.2",
     "multer": "^2.0.2",
     "multicast-dns": "^7.2.5",
@@ -41,13 +41,13 @@
     "@electron-forge/cli": "^7.11.1",
     "@electron-forge/maker-deb": "^7.11.1",
     "@electron-forge/maker-rpm": "^7.11.1",
-    "@electron-forge/shared-types": "^7.11.1",
     "@electron-forge/maker-squirrel": "^7.11.1",
     "@electron-forge/maker-wix": "^7.11.1",
     "@electron-forge/maker-zip": "^7.11.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-webpack": "^7.11.1",
+    "@electron-forge/shared-types": "^7.11.1",
     "@electron/fuses": "^2.0.0",
     "@types/dns-packet": "^5.6.5",
     "@types/ejs": "^3.1.5",
